@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.4 2003/07/13 07:36:42 taca Exp $
+# $NetBSD: Makefile.common,v 1.5 2003/07/15 14:49:05 hubertf Exp $
 #
 # This Makefile.common is included by:
 #
@@ -8,7 +8,7 @@
 # If these packages are updated, please remember to reset any PKGREVISIONs
 # in those Makefiles.
 
-DISTNAME=       xlockmore-5.08.2
+DISTNAME=       xlockmore-5.09
 CATEGORIES=	x11
 MASTER_SITES=	ftp://ftp.tux.org/pub/tux/bagleyd/xlockmore/ \
 		${MASTER_SITE_XCONTRIB:=applications/}
