@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2792 2003/07/15 12:44:28 drochner Exp $
+$NetBSD: CHANGES,v 1.2793 2003/07/15 14:49:04 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2823,3 +2823,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated verilog-current to 20030705 [drochner 2003-07-15]
 	Added gtkwave-2.0.0pre3.20030319 [drochner 2003-07-15]
 	Updated dinotrace to 9.1k [drochner 2003-07-15]
+	Updated xlockmore to 5.09 [hubertf 2003-07-15]
